Wed May 25 18:30:53 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (fetch_token_in_cc): raise error if given octal escaped
	  character is too big. [Bug #12420] [Bug #12423]

Wed May 25 17:45:15 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl, test/openssl: Drop OpenSSL < 0.9.8 support.

Wed May 25 17:43:30 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.h, ext/openssl/ossl.h: Remove
	  unnecessary 'extern "C"' blocks. We don't use C++ and these headers
	  are local to ext/openssl, so there is no need to enclose with it.

Wed May 25 17:42:58 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Remove check of OPENSSL_FIPS macro. This is
	  unneeded because we can check the macro directly in source code,
	  just as we already do for OPENSSL_NO_* macros.

	* ext/openssl/ossl.c: Replace occurrences of HAVE_OPENSSL_FIPS with
	  OPENSSL_FIPS.

Wed May 25 17:13:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_scan_args): merge code for n_trail.

Wed May 25 17:11:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_validate): move failed
	  condition to the terminal.  [ruby-core:75714] [Bug #12426]

Wed May 25 13:13:37 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c: remove condition for debug output because prelude
	  doesn't use regexp now.

Wed May 25 13:10:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (compile_length_tree): return error code immediately
	  if compile_length_tree raised error [Bug #12418]

Wed May 25 08:01:39 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fix flag error for switch from titlecase to lowercase.

	* test/ruby/enc/test_case_mapping.rb: Tests for above error.

Wed May 25 01:13:55 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ec_key_new_from_group): Create a new
	  EC_KEY on given EC group. Extracted from ossl_ec_key_initialize().
	  (ossl_ec_key_s_generate): Added. Create a new EC instance and