@@ -1,3 +1,7 @@
+Wed May 25 19:07:19 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/unicode.c: Handle DOTLESS_i by hand because it isn't involved in folding.
+
 Wed May 25 18:30:53 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* regparse.c (fetch_token_in_cc): raise error if given octal escaped
